# ardumower-modem

./: .gitignore  .libraries.esp32  .libraries.esp32-S3  README.md  Taskfile.yml  package-lock.json  platformio.ini  sdkconfig.esp32-S3-N16-R8  sdkconfig.esp32-S3-N16-R8.old  test_exclusion.py
.github/workflows/: ci.yml
ci/: pio_git_version.py
docs/: pinout.md
docs/ardumower-webapp-deobfuscated/: README.md  deobfuscate.js  map.deobf.js  pathfinder.deobf.js  wpplanner.deobf.js
lib/Clipper2/: library.json
release_notes/: v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.1.0.md  v2.2.0.md  v2.3.0.md  v2.3.1.md
src/: asset_bundle.h  backoff.h  ble_adapter.cpp  ble_adapter.h  conn.cpp  console.cpp  console.h  domain.cpp  domain.h  esp_modem.cpp  esp_os.cpp  git_version.cpp  git_version.h  http_adapter.cpp  http_adapter.h  http_adapter_request.cpp  http_adapter_socket.cpp  http_adapter_socket.h  json.cpp  log.h  logToUi.cpp  logToUi.h  mower_adapter.cpp  mower_adapter.h  mower_map.h  mqtt_adapter.cpp  mqtt_adapter.h  mqtt_iobroker.cpp  ota_http_server.cpp  ota_http_server.h  ota_mower_updater.cpp  ota_mower_updater.h  path_planner.cpp  path_planner.h  prometheus.h  prometheus_adapter.cpp  prometheus_adapter.h  prometheus_impl.h  prometheus_util.cpp  ps4_controller.cpp  (+17 more)
test/: prometheus_adapter_test.h  settings_test.h  ui_test.h
test_pathplanner/: CMakeLists.txt  Makefile  path_planner_test.cpp  test_exclusion.cpp  test_main.cpp  test_runner  test_stub.h
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.js
(+194 files in other folders)
